レイアウト変更、エフェクト変更

--- a/06_effect/index.html
+++ b/06_effect/index.html
@@ -24,8 +24,10 @@
                     <p class="effect__contents__index__text">Blur</p>
                 </h2>
                 <figure class="effect__contents__element second_image">
-                    <img src="./common/img/cat_sumple.jpg" alt="image02">
                 </figure>
+                <!-- <figure class="effect__contents__element second_image">
+                    <img src="./common/img/cat_sumple.jpg" alt="image02">
+                </figure> -->
             </div>
             <!-- グレー化機能 -->
             <div class="effect__contents">
