フォント、書籍余白修正、youtube実装。fontフォルダ作成完了。

--- a/04_font/index.html
+++ b/04_font/index.html
@@ -9,35 +9,47 @@
     </head>
     <body>
         <div class="contents">
+            <!-- あらすじ -->
             <section class="synopsis">
                 <h1 class="contents__ttl">走れメロス</h1>
                 <h2 class="contents__sub_ttl">太宰治</h2>
                 <p class="contents__text">
-                    メロスは激怒した。必ず、かの邪智暴虐の王を除かなければならぬと決意した。<br>メロスには政治がわからぬ。メロスは、村の牧人である。笛を吹き、羊と遊んで暮らして来た。<br>けれども邪悪に対しては、人一倍に敏感であった。
+                    メロスは<strong>激怒</strong>した。必ず、かの<ruby><rb>邪智暴虐</rb><rp>(</rp><rt>じゃちぼうぎゃく</rt><rp>)</rp></ruby>の王を除かなければならぬと決意した。<br>メロスには政治がわからぬ。メロスは、村の牧人である。
+                    <span>笛を吹き</span>、<b>羊</b>と遊んで暮らして来た。<br>けれども<mark>邪悪</mark>に対しては、人一倍に<em>敏感</em>であった。
                 </p>
             </section>
-            <section class="contents__supplement">
+            <!-- 補足情報 -->
+            <aside class="contents__supplement">
                 <h3 class="contents__supplement__ttl">補足情報</h3>
                 <h4 class="contents__supplement__index">書籍</h4>
                 <div class="book__info">
                     <figure class="book__info__detail">
-                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="">
+                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="走れメロス">
+                        <figcaption>走れメロス</figcaption>
                     </figure>
                     <figure class="book__info__detail">
-                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="">
+                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="走れメロス">
+                        <figcaption>走れメロス</figcaption>
                     </figure>
                     <figure class="book__info__detail">
-                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="">
+                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="走れメロス">
+                        <figcaption>走れメロス</figcaption>
                     </figure>
                     <figure class="book__info__detail">
-                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="">
+                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="走れメロス">
+                        <figcaption>走れメロス</figcaption>
                     </figure>
                     <figure class="book__info__detail">
-                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="">
+                        <img class="book__info__detail__img" src="./common/img/image01.jpg" alt="走れメロス">
+                        <figcaption>走れメロス</figcaption>
                     </figure>
                 </div>
-                <h4 class="contents__supplement__index">動画</h4>
-            </section>
+                <h4 class="contents__supplement__index supplement__ytube__margin">動画</h4>
+                <div class="ytube">
+                    <iframe src="https://www.youtube.com/embed/3kC4fPDB5jw" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </aside>
+            <!-- お問い合わせ -->
             <section class="contact">
                 <address class="contact__text">
                     お問い合わせはこちらまで「
