【03_recommend】評価画像差し替え、それに伴うソース修正

--- a/03_recommend/index.html
+++ b/03_recommend/index.html
@@ -18,10 +18,26 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;P&amp;G&gt;&nbsp;&quot;ヴィダルサスーン&nbsp;シャンプー&nbsp;ベースケアモイスチャーコントロール&quot;</p>
                     </a>
-                    <figure class="evaluation">
-                        <img class="evaluation__star" src="./common/img/star_image01.png" alt="星5のなか星4の評価">
-                        <figcaption class="evaluation__star__average">4</figcaption>
-                    </figure>
+                    <div class="evaluation">
+                        <ol class="evaluation__star">
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image02.png" alt="">
+                            </li>
+                        </ol>
+                        <p class="evaluation__star__average">4</p>
+                    </div>
                     <div class="other">
                         <p class="price">&yen;777</p>
                         <div class="prime"></div>
@@ -32,10 +48,26 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;ユニリーバ&gt;&nbsp;&quot;mod&apos;s&nbsp;hair&nbsp;ホットケアシャンプー&quot;</p>
                     </a>
-                    <figure class="evaluation">
-                        <img class="evaluation__star" src="./common/img/star_image01.png" alt="星5のなか星4の評価">
-                        <figcaption class="evaluation__star__average">4</figcaption>
-                    </figure>
+                    <div class="evaluation">
+                        <ol class="evaluation__star">
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image02.png" alt="">
+                            </li>
+                        </ol>
+                        <p class="evaluation__star__average">4</p>
+                    </div>
                     <div class="other">
                         <p class="price">&yen;777</p>
                         <div class="prime"></div>
@@ -46,10 +78,26 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;花王&gt;&nbsp;&quot;メリット&nbsp;ビュアイン&nbsp;シャンプー&nbsp;モイスチャー&quot;</p>
                     </a>
-                    <figure class="evaluation">
-                        <img class="evaluation__star" src="./common/img/star_image01.png" alt="星5のなか星4の評価">
-                        <figcaption class="evaluation__star__average">4</figcaption>
-                    </figure>
+                    <div class="evaluation">
+                        <ol class="evaluation__star">
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image02.png" alt="">
+                            </li>
+                        </ol>
+                        <p class="evaluation__star__average">4</p>
+                    </div>
                     <div class="other">
                         <p class="price">&yen;777</p>
                         <div class="prime"></div>
@@ -60,10 +108,26 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;LION&gt;&nbsp;&quot;ソフトインワン&nbsp;シャンプー&nbsp;スッキリデオドラント&quot;</p>
                     </a>
-                    <figure class="evaluation">
-                        <img class="evaluation__star" src="./common/img/star_image01.png" alt="星5のなか星4の評価">
-                        <figcaption class="evaluation__star__average">4</figcaption>
-                    </figure>
+                    <div class="evaluation">
+                        <ol class="evaluation__star">
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image02.png" alt="">
+                            </li>
+                        </ol>
+                        <p class="evaluation__star__average">4</p>
+                    </div>
                     <div class="other">
                         <p class="price">&yen;777</p>
                         <div class="prime"></div>
@@ -74,10 +138,26 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;資生堂&gt;&nbsp;&quot;TSUBAKI&nbsp;ダメージケア&nbsp;シャンプー&quot;</p>
                     </a>
-                    <figure class="evaluation">
-                        <img class="evaluation__star" src="./common/img/star_image01.png" alt="星5のなか星4の評価">
-                        <figcaption class="evaluation__star__average">4</figcaption>
-                    </figure>
+                    <div class="evaluation">
+                        <ol class="evaluation__star">
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image01.png" alt="">
+                            </li>
+                            <li class="evaluation__star__detail">
+                                <img class="evaluation__star__detail__img" src="./common/img/star_image02.png" alt="">
+                            </li>
+                        </ol>
+                        <p class="evaluation__star__average">4</p>
+                    </div>
                     <div class="other">
                         <p class="price">&yen;777</p>
                         <div class="prime"></div>
