【03_recommend】htmlにコメント付け忘れ

--- a/03_recommend/index.html
+++ b/03_recommend/index.html
@@ -12,12 +12,14 @@
             <header class="header">
                 <h1 class="header__index">この商品を買った人はこんな商品も買っています</h1>
             </header>
+            <!-- おすすめ商品 -->
             <ul class="contents__list">
                 <li class="contents__list__goods">
                     <a href="#">
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;P&amp;G&gt;&nbsp;&quot;ヴィダルサスーン&nbsp;シャンプー&nbsp;ベースケアモイスチャーコントロール&quot;</p>
                     </a>
+                    <!-- 星評価 -->
                     <div class="evaluation">
                         <ol class="evaluation__star">
                             <li class="evaluation__star__detail">
@@ -48,6 +50,7 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;ユニリーバ&gt;&nbsp;&quot;mod&apos;s&nbsp;hair&nbsp;ホットケアシャンプー&quot;</p>
                     </a>
+                    <!-- 星評価 -->
                     <div class="evaluation">
                         <ol class="evaluation__star">
                             <li class="evaluation__star__detail">
@@ -78,6 +81,7 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;花王&gt;&nbsp;&quot;メリット&nbsp;ビュアイン&nbsp;シャンプー&nbsp;モイスチャー&quot;</p>
                     </a>
+                    <!-- 星評価 -->
                     <div class="evaluation">
                         <ol class="evaluation__star">
                             <li class="evaluation__star__detail">
@@ -107,7 +111,7 @@
                     <a href="#">
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;LION&gt;&nbsp;&quot;ソフトインワン&nbsp;シャンプー&nbsp;スッキリデオドラント&quot;</p>
-                    </a>
+                    </a><!-- 星評価 -->
                     <div class="evaluation">
                         <ol class="evaluation__star">
                             <li class="evaluation__star__detail">
@@ -138,6 +142,7 @@
                         <p class="contents__list__goods__image">商品画像</p>
                         <p class="contents__list__goods__index">&lt;資生堂&gt;&nbsp;&quot;TSUBAKI&nbsp;ダメージケア&nbsp;シャンプー&quot;</p>
                     </a>
+                    <!-- 星評価 -->
                     <div class="evaluation">
                         <ol class="evaluation__star">
                             <li class="evaluation__star__detail">
