【05_table】大方のhtmlとcssが完成

--- a/05_table/index.html
+++ b/05_table/index.html
@@ -8,5 +8,361 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <div class="contents">
+            <header class="header">
+                <h1 class="header__date">2020年5月</h1>
+            </header>
+            <main class="account">
+                <ul class="account_data">
+                    <!-- 上段 -->
+                    <li class="account_data__list">
+                        <h2 class="account_data__headline">今月の収入</h2>
+                        <table class="account_data__table table_blue_line">
+                            <tr class="account_data__index blue">
+                                <th>項目</th>
+                                <th>金額</th>
+                                <th>支払先</th>
+                                <th>支払日</th>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>給与 夫(毎月25日)</td>
+                                <td class="bk_orange">315,908</td>
+                                <td>住信SBI</td>
+                                <td>05/23</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>給与 妻(毎月25日)</td>
+                                <td class="bk_orange">173,099</td>
+                                <td>住信SBI</td>
+                                <td>05/23</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>副収入</td>
+                                <td class="bk_orange">15,000</td>
+                                <td>楽天銀行</td>
+                                <td>05/23</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>賞与 夫</td>
+                                <td class="bk_orange">590,000</td>
+                                <td>楽天銀行</td>
+                                <td>06/10</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line account_body_blue_last_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line bk_blue">
+                                <td>収入合計</td>
+                                <td>1,094,007</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </table>
+                    </li>
+                    <li class="account_data__list">
+                        <h2 class="account_data__headline">今月の貯蓄額</h2>
+                        <table class="account_data__table table_red_line">
+                            <tr class="account_data__index red">
+                                <th>項目</th>
+                                <th>金額</th>
+                                <th>支払先</th>
+                                <th>支払日</th>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">セブン投信</td>
+                                <td class="bk_orange">25,000</td>
+                                <td>三菱東京</td>
+                                <td>06/04</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">ひふみ投信</td>
+                                <td class="bk_orange">25,000</td>
+                                <td>三菱東京</td>
+                                <td>06/05</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">給料日貯蓄額</td>
+                                <td class="bk_orange">100,316</td>
+                                <td>住信SBI</td>
+                                <td>05/25</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">賞与 夫</td>
+                                <td class="bk_orange">590,000</td>
+                                <td>住信SBI</td>
+                                <td>06/10</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line account_body_red_last_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line bk_red">
+                                <td>総貯蓄額</td>
+                                <td>740,316</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </table>
+                    </li>
+                    <!-- 下段 -->
+                    <li class="account_data__list">
+                        <h2 class="account_data__headline">今月の固定支出</h2>
+                        <table class="account_data__table table_blue_line">
+                            <tr class="account_data__index blue">
+                                <th>項目</th>
+                                <th>金額</th>
+                                <th>支払先</th>
+                                <th>支払日</th>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>電気代(3/19〜4/17)</td>
+                                <td class="bk_orange">15,000</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>水道代(2/4〜4/1)</td>
+                                <td class="bk_orange">10,000</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>ガス代(3/11〜4/10)</td>
+                                <td class="bk_orange">13,000</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>携帯代(3月分)</td>
+                                <td class="bk_orange">5,027</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>生活費(4月分)</td>
+                                <td class="bk_orange">115,879</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>nanacoチャージ費(4月分)</td>
+                                <td class="bk_orange">15,000</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line account_body_blue_last_line">
+                                <td>交通費(4月分)</td>
+                                <td class="bk_orange">14,516</td>
+                                <td>住信SBI</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line account_body_blue_bottom">
+                                <td>カード支払い</td>
+                                <td class="bk_orange">188,422</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>住宅ローン(6月分)</td>
+                                <td class="bk_orange">77,419</td>
+                                <td>三菱東京</td>
+                                <td>05/26</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>管理・修繕費(6月分)</td>
+                                <td class="bk_orange">33,270</td>
+                                <td>三菱東京</td>
+                                <td>05/27</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>学童費(毎月月末)</td>
+                                <td class="bk_orange">6,000</td>
+                                <td>三菱東京</td>
+                                <td>06/01</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>保育園代(毎月月末)</td>
+                                <td class="bk_orange">20,020</td>
+                                <td>三菱東京</td>
+                                <td>06/01</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>給食費(毎月20日)</td>
+                                <td class="bk_orange">3,560</td>
+                                <td>ゆうちょ銀行</td>
+                                <td>06/20</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td>小遣い費(夫)</td>
+                                <td class="bk_orange">25,000</td>
+                                <td>住信SBI</td>
+                                <td>05/25</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line">
+                                <td class="text_cancellation">小遣い費(妻)</td>
+                                <td class="bk_orange">0</td>
+                                <td>住信SBI</td>
+                                <td>05/25</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line account_body_blue_last_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_blue_line  bk_blue">
+                                <td>支出合計</td>
+                                <td>353,691</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </table>
+                    </li>
+                    <li class="account_data__list">
+                        <h2 class="account_data__headline">今月の生活費(予算:12万円)</h2>
+                        <table class="account_data__table table_red_line">
+                            <tr class="account_data__index red">
+                                <th>項目</th>
+                                <th>金額</th>
+                                <th>予算</th>
+                                <th>残り</th>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">食費</td>
+                                <td class="bk_orange">45,000</td>
+                                <td>50,000</td>
+                                <td class="balance">5,000</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">日用品費</td>
+                                <td class="bk_orange">9,480</td>
+                                <td>10,000</td>
+                                <td class="balance">520</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">レジャー&and;外食費</td>
+                                <td class="bk_orange">11,251</td>
+                                <td>10,000</td>
+                                <td class="balance excess">-1,251</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">交通費</td>
+                                <td class="bk_orange">9,500</td>
+                                <td>10,000</td>
+                                <td class="balance">500</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">教育費</td>
+                                <td class="bk_orange">8,500</td>
+                                <td>10,000</td>
+                                <td class="balance">1,500</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">医療費</td>
+                                <td class="bk_orange">4,500</td>
+                                <td>5,000</td>
+                                <td class="balance">500</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">被服費</td>
+                                <td class="bk_orange">6,689</td>
+                                <td>5,000</td>
+                                <td class="balance excess">-1,689</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">美容費</td>
+                                <td class="bk_orange">2,800</td>
+                                <td>5,000</td>
+                                <td class="balance">2,200</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">その他</td>
+                                <td class="bk_orange">3,500</td>
+                                <td>5,000</td>
+                                <td class="balance">1,500</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">お小遣い</td>
+                                <td class="bk_orange">3,000</td>
+                                <td>10,000</td>
+                                <td class="balance">7,000</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td class="bk_red">特別費</td>
+                                <td class="bk_orange">4,500</td>
+                                <td>10,000</td>
+                                <td class="balance">5,500</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line account_body_red_last_line">
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr class="account_data__line account_body_red_line bk_red">
+                                <td>総貯蓄額</td>
+                                <td>108,720</td>
+                                <td>130,000</td>
+                                <td class="balance">21,280</td>
+                            </tr>
+                        </table>
+                    </li>
+                </ul>
+            </main>
+            <section class="menu">
+                <h3 class="menu__ttl">メニュー</h3>
+                <nav class="menu__contents">
+                    <ul class="menu__contents__list">
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;収入</a>
+                        </li>
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;新メンテナンス</a>
+                        </li>
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;年間収支</a>
+                        </li>
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;年払支出リスト</a>
+                        </li>
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;住宅ローン返納計画書</a>
+                        </li>
+                        <li class="menu__contents__list__detail">
+                            <a href="#">&lt;&lt;キャッシュフロー表</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+        </div>
     </body>
 </html>
